--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="menu-container">
         <div class="menu-item">
             <div class="icon">🏠</div>
-            <h3>Página Inicial</h3>
+            <h3><a href="Projeto 01/index.html">App Weather</a>a></h3>
             <p>Volte para o início</p>
         </div>
         <div class="menu-item">
