--- a/index.html
+++ b/index.html
@@ -122,11 +122,15 @@
 </head>
 <body>
     <div class="menu-container">
+
+        <a href="Projeto 01/index.html" style="text-decoration:none;">
         <div class="menu-item">
             <div class="icon">🏠</div>
-            <h3><a href="Projeto 01/index.html">App Weather</a>a></h3>
+            <h3>App Weather</h3>
             <p>Volte para o início</p>
         </div>
+        </a>
+        
         <div class="menu-item">
             <div class="icon">👤</div>
             <h3>Perfil</h3>
