--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <body>
     <div class="menu-container">
 
-       
+        <a href="Projeto 01/index.html" style="text-decoration:none;">
         <div class="menu-item">
             <div class="icon">🏠</div>
             <h3>App Weather</h3>
