--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="menu-item">
             <div class="icon">🏠</div>
             <h3>App Weather</h3>
-            <p>Volte para o início</p>
+            <p>Aplicativo de Tempo</p>
         </div>
         </a>
 
@@ -136,7 +136,7 @@
         <div class="menu-item">
             <div class="icon">👤</div>
             <h3>To Do List</h3>
-            <p>Gerencie suas informações</p>
+            <p>Aplicativo de Listas</p>
         </div>
         </a>
         <!--
