--- a/index.html
+++ b/index.html
@@ -248,6 +248,15 @@
 </head>
 <body>
     <div class="container">
+
+        <div class="title">
+            <span class="coin-icon">🎮</span>
+            CALCULADORA DE GASTOS
+            <div><a href="calc.html">
+                ✨ CLICK AQUI ✨
+            </a>
+            </div>
+        </div>
         <div class="title">
             <span class="coin-icon">🎮</span>
             CALCULADORA DE MOEDAS
@@ -255,7 +264,7 @@
                 ✨ SIMULE SUA FORTUNA ✨
             </div>
         </div>
-
+         
         <div class="calculator-grid">
             <div class="card">
                 <h2 class="card-title">CONFIGURE SUA MISSÃO</h2>
