--- a/calc.html
+++ b/calc.html
@@ -252,7 +252,7 @@
         
             
             CALCULADORA DE GASTOS
-            <div><a href="./calc.html" style="color: white;">
+            <div><a href="./calc.html" style="color: white; text-decoration: none;">
                 ✨ CLICK AQUI ✨
             </a>
             </div>
